...
        android:text="@string/lp"
        app:layout_constraintEnd_toStartOf="@+id/games"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summonerIcon" />

    <TextView
        android:id="@+id/summonerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/level"
        app:layout_constraintBottom_toBottomOf="@+id/winRate"
...
